--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@ hr{
     height: auto;
     font-family: 'georgia';
     font-size: 20px;
-    color: rgba(29, 29, 29, 0.977);
-    line-height: 30px;
+    color: rgba(17, 17, 17, 0.959);
+    line-height: 32px;
     padding: 10px;
   
 }
@@ -594,8 +594,8 @@ hr{
     height: 130px;
     font-family: 'georgia';
     font-size: 20px;
-    color: rgba(29, 29, 29, 0.977);
-    line-height: 30px;
+    color: rgba(17, 17, 17, 0.959);
+    line-height: 32px;
     margin-top: -1rem;
 }
 
@@ -1083,7 +1083,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </strong>
     </span>
   <p>
-    <br><em style="color:#ff3006">L'éducation est l'épine dorsale pour susciter un devéloppment durable</em>. C'est pour cela que l'amélioration de l'éducation des personnes handicapées est prise au sérieux dans la vision de Tiki N'Yiki.  
+    <br><em style="color:#ff0a06">L'éducation est l'épine dorsale pour susciter un devéloppment durable</em>. C'est pour cela que l'amélioration de l'éducation des personnes handicapées est prise au sérieux dans la vision de Tiki N'Yiki.  
     Le programme d'éducation a été implementé grâce à une contribution de bénévoles dont le promoteur de Tiki N'Yiki. 
     Ce programme est structuré comme suit: 
     <br>
