--- a/index.html
+++ b/index.html
@@ -437,16 +437,19 @@ hr{
 }
 
 ::-webkit-scrollbar{
-    width: 15px;
-
+    width: 14px;
+   
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(221, 221, 221, 0.925);
+    background: rgba(248, 248, 248, 0.925);
+    padding: 10px;
 }
 ::-webkit-scrollbar-thumb{
-    background: rgb(141, 141, 141);
-    width: 14px;
-    padding: 4px;
+    background: rgb(126, 126, 126);
+    width: 5px;
+    height: 20px;
+    border-radius: 1rem;
+    justify-self: center;
 }
 
 .content1{
