--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@ function myFunction() {
           <div class="CRT2">
 
             <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxY1cVPQDL3esU9aXKu9tMoGRjXI0M-0jB-ndrgwA&s" alt="Africa">
+            <img src="https://previews.123rf.com/images/michal812/michal8121306/michal812130600184/20531769-burkina-faso-on-actual-vintage-political-map-of-africa-with-flags.jpg" alt="Africa">
             <figure>
               <figcaption style=" margin-top: 0.1rem; color: #2e2e2e; font-family: 'verdana'; font-size: 13px; text-align: left;">Carte du Burkina Faso en Afrique </figcaption>
               </figure>
