--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     
         <p>
           <br>La santé est un droit universel pour tout le monde. Mais comment les personnes sans revenus ou à faible revenus pourront accéder aux traitements medicaux quand elles tombent malades vu que la santé devient une affaire d'argent un peu partout ? 
-          Sur ce point très crucial, l'approche de Tiki N'Yiki est de créer divers partenariats avec des hôpitaux, des médécins, groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leurs expériences pour soigner des enfants handicapés parce quIls manquent de couverture 
+          Sur ce point très crucial, l'approche de Tiki N'Yiki est de créer divers partenariats avec des hôpitaux, des médécins, groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leurs expériences pour soigner des enfants handicapés parce qu'ils manquent de couverture 
           médicale gratuite ou peu onéreuse et manquent cruellemnet de moyens pour se soigner en cas de maladie.
         </p>
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
