--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1013,8 +1013,8 @@ Dans un futur très immédiat, ces personnes handicapées doivent être totaleme
     </span>
     <br>
     <br>
-    Combien d'écoles specialisées sont construites au profit des peronnes cibles au Burkina Faso ? Combien d'écoles publiques ou privées sont equipées de rampes pour les étudiants handicapés ? 
-    Quel quota est réservé aux personnes en situation de handicap qui prennent part aux concours publiques auxquels l'éducation physique est une obligation et que ces dernières ne sont pas aptes à la pratiquer ? Il est difficile de dire exactement un chiffre le reflétant mais à la lumière de nombreux stastistiques, il s'avère une grande necessité de faire plus et mieux pour les personnes handicapées en matière d'inclusion. 
+    Combien d'écoles specialisées sont construites au profit des personnes en besoin au Burkina Faso ? Combien d'établissements publiques ou privés, de lieux publiques de l'administration, de culte, de centres d'achat sont equipées de rampes pour les étudiants handicapés ? 
+    Quel quota est réservé aux personnes en situation de handicap qui prennent part aux concours publiques auxquels l'éducation physique est une obligation et que les handicapé-es ne sont pas aptes à pratiquer ? Il est difficile de dire exactement des chiffres illustratifs mais à la lumière de nombreux stastistiques, il s'avère d'une grande necessité de faire plus et mieux pour les personnes handicapées en matière d'inclusion. 
     <br>
     <br>
     Créer et adapter des infrastructures et services pour ces personnes devrait faire partie des priorités des gouvernements Africains afin de permettre une totale participation des handicapés au devéloppement et à une meilleure intégration sociale.       
@@ -1044,11 +1044,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         Le centre pourra offrir des chambres adaptées aux enfants handicapés dont les familles vivent loin de la ville le long de l'année afin de leur permettre de demeurer près du lieu d'étude. Par conséquent ils seront permis d'avoir des visites de leurs familles et proches en cas de besoin sur la base d'un agenda. 
         <br>
         <br>
-        Etant handicapés, vivre au futur centre de Tiki N'Yiki en ville signifie la proximité à certains services dont ils ont besoin comme l'hôpital, les centres d'achat, les lieux de sport, de divertissement mais 
-        aussi permettra à beaucoup d'entre eux de vivre moins les discriminations que dans les milieux ruraux dans lesquels l'inclusion n'est pas d'actualité. 
+        Etant handicapés, vivre au futur centre de Tiki N'Yiki en ville signifie la proximité à certains services importants comme l'hôpital, les centres d'achat, les lieux de sport, de divertissement mais 
+        en plus ils vivront de moins en moins les discriminations que dans les milieux ruraux dans lesquels l'inclusion n'est pas d'actualité. 
         <br>
         <br>
-        Nous connaissons tous l'importance de l'éducation entant que puissant outil d'éveil, le but premier de Tiki N'Yiki est d'améliorer l'éducation, et aider ces enfants handicapés à avoir des opportunities dont ils méritent malgré leur handicap. C'est pour cela que l'INCLUSION devrait être supportée.
+        Nous connaissons tous l'importance de l'éducation entant que puissant outil, le but premier de Tiki N'Yiki est d'améliorer l'éducation, et aider ces enfants handicapés à avoir des opportunities dont ils méritent malgré leur handicap. C'est pour cela que l'INCLUSION devrait être supportée.
         <br><br>
         <b style="font-size: 22px; font-family:'trebuchet ms'; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 20px;">Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
