--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <p>
           <br>La santé est un droit universel pour tout le monde. Mais comment les personnes handicapées sans ou à faible revenus pourront accéder aux soins medicaux quand elles tombent malades vu que la santé devient une grande affaire d'argent ? 
           Sur ce point très crucial, l'approche de Tiki N'Yiki sera de créer divers partenariats avec des hôpitaux, des médécins, des groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leur savoir-faire pour soigner des enfants handicapés qui manquent de couverture 
-         médicale en cas de maladie ?
+         médicale en cas de maladie.
         </p>
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
