--- a/index.html
+++ b/index.html
@@ -969,9 +969,9 @@ function myFunction() {
             </div>
 
           <div>
-         <img src="https://cdn.britannica.com/59/69759-004-5F796977/Burkina-Faso-map.jpg?w=740&h=416&c=crop" alt="Carte du Burkina Faso">
+         <img src="https://www.worldrover.com/vital/uv-150.gif" alt="Carte du Burkina Faso">
          <figure>
-          <figcaption style=" margin-top: 0.1rem; color: #2e2e2efa; font-family: 'verdana'; font-size: 13px; text-align: left;">Carte du Burkina Faso avec ses villes et cités</figcaption>
+          <figcaption style=" margin-top: 0.1rem; color: #2e2e2efa; font-family: 'verdana'; font-size: 13px; text-align: left;">Carte du Burkina Faso avec ses principales villes</figcaption>
           </figure>
         </div>
 
