--- a/index.html
+++ b/index.html
@@ -969,9 +969,9 @@ function myFunction() {
             </div>
 
           <div>
-         <img src="https://www.worldrover.com/vital/uv-150.gif" alt="Carte du Burkina Faso">
+         <img src="https://ow-prayer-api.info/files/en/images/main-maps/burk-02.png" alt="Carte du Burkina Faso">
          <figure>
-          <figcaption style=" margin-top: 0.1rem; color: #2e2e2efa; font-family: 'verdana'; font-size: 13px; text-align: left;">Carte du Burkina Faso avec ses principales villes</figcaption>
+          <figcaption style=" margin-top: 0.1rem; color: #2e2e2efa; font-family: 'verdana'; font-size: 13px; text-align: left;">Carte du Burkina Faso avec les pays frontaliers et sa capitale OUAGADOUGOU</figcaption>
           </figure>
         </div>
 
