--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ hr{
     text-align: left;
     width: 73.25%;
     height: auto;
-    font-family: 'georgia';
+    font-family: 'arial';
     font-size: 20px;
     color: rgba(17, 17, 17, 0.959);
     line-height: 32px;
@@ -595,7 +595,7 @@ hr{
     text-align: left;
     width: 100%;
     height: 130px;
-    font-family: 'georgia';
+    font-family: 'arial';
     font-size: 20px;
     color: rgba(17, 17, 17, 0.959);
     line-height: 32px;
@@ -1013,7 +1013,7 @@ Dans un futur très immédiat, ces personnes handicapées doivent être totaleme
     </span>
     <br>
     <br>
-    Combien d'écoles specialisées sont construites au profit des personnes en besoin au Burkina Faso ? Combien d'établissements publiques ou privés, de lieux publiques de l'administration, de culte, de centres d'achat sont equipées de rampes pour les étudiants handicapés ? 
+    Combien d'écoles specialisées sont construites au profit des personnes en besoin au Burkina Faso ? Combien d'établissements publiques ou privés, de lieux publiques de l'administration, de culte, de centres d'achat sont equipées de rampes pour les personnes handicapées ? 
     Quel quota est réservé aux personnes en situation de handicap qui prennent part aux concours publiques auxquels l'éducation physique est une obligation et que les handicapé-es ne sont pas aptes à pratiquer ? Il est difficile de dire exactement des chiffres illustratifs mais à la lumière de nombreux stastistiques, il s'avère d'une grande necessité de faire plus et mieux pour les personnes handicapées en matière d'inclusion. 
     <br>
     <br>
@@ -1086,7 +1086,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </strong>
     </span>
   <p>
-    <br><em style="color:#ff0a06">L'éducation est l'épine dorsale pour susciter un devéloppment durable</em>. C'est pour cela que l'amélioration de l'éducation des personnes handicapées est prise au sérieux dans la vision de Tiki N'Yiki.  
+    <br><em style="color:#ff0a06">L'éducation est l'épine dorsale pour susciter un devéloppement durable</em>. C'est pour cela que l'amélioration de l'éducation des personnes handicapées est prise au sérieux dans la vision de Tiki N'Yiki.  
     Le programme d'éducation a été implementé grâce à une contribution de bénévoles dont le promoteur de Tiki N'Yiki lui-même. 
     Ce programme est structuré comme suit: 
     <br>
