--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@ Dans un futur très immédiat, ces personnes handicapées doivent être totaleme
     </span>
     <br>
     <br>
-    Combien d'écoles specialisées sont construites au profit des personnes en besoin au Burkina Faso ? Combien d'établissements publiques ou privés, de lieux publiques de l'administration, de culte, de centres d'achat sont equipées de rampes pour les personnes handicapées ? 
+    Combien d'écoles specialisées sont construites au profit des personnes en besoin au Burkina Faso ? Combien d'établissements publiques ou privés, de lieux publiques de l'administration, de culte, de centres d'achat sont equipés de rampes pour les personnes handicapées ? 
     Quel quota est réservé aux personnes en situation de handicap qui prennent part aux concours publiques auxquels l'éducation physique est une obligation et que les handicapé-es ne sont pas aptes à pratiquer ? Il est difficile de dire exactement des chiffres illustratifs mais à la lumière de nombreux stastistiques, il s'avère d'une grande necessité de faire plus et mieux pour les personnes handicapées en matière d'inclusion. 
     <br>
     <br>
