--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ hr{
     text-align: left;
     width: 73.25%;
     height: auto;
-    font-family: 'arial';
+    font-family: 'helvetica';
     font-size: 17.5px;
     color: rgba(17, 17, 17, 0.959);
     line-height: 32px;
@@ -595,7 +595,7 @@ hr{
     text-align: left;
     width: 100%;
     height: 130px;
-    font-family: 'arial';
+    font-family: 'helvetica';
     font-size: 17.5px;
     color: rgba(17, 17, 17, 0.959);
     line-height: 32px;
