--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     
     .navbar{
       display: grid;
-      grid-template-rows: 0.4fr 0.5fr 0.5fr 0.55fr;
+      grid-template-rows: 0.65fr 1fr 0.5fr 0.5fr;
                  justify-content: center;
                  justify-items: center;
                  background: #fff;
@@ -823,7 +823,7 @@ function myFunction() {
       </a>
       <a href="https://www.timeanddate.com/calendar/" target="_blank">
         <div class="datime">
-          <b> <p id="demo" style="margin-left: 35px">
+          <b> <p id="demo">
                   <span id="datetime" > </span>
                </p></b>
               </div>
@@ -883,7 +883,7 @@ function myFunction() {
 
 </div>
 
-<div class="navbar0"><p style="margin-top: 2.5rem;">Bienvenue ! Ce site est en devéloppement. Repassez bientôt svp !</p></div>
+<div class="navbar0"><p style="margin-top: 2.5rem;">Bienvenue ! Ce site est en devéloppement. Merci !</p></div>
 
 <div class="fwrapper">
 
