--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@ function myFunction() {
 
 </div>
 
-<div class="navbar0"><p style="margin-top: 2.5rem;">Bienvenue ! Ce site est en devéloppement. Merci !</p></div>
+<div class="navbar0"><p style="margin-top: 2.5rem;">Bienvenue ! Ce site est en devéloppement. Bonne Visite !</p></div>
 
 <div class="fwrapper">
 
@@ -950,7 +950,7 @@ function myFunction() {
 
             <div class="CRT1">
             
-        Le Burkina Faso est un pays enclavé de l'Afrique de l'ouest s'étendant sur une superficie de 274.300 kilomètres carrés et peuplé de 22.1 millions d'habitants. Son économie se repose en grande partie sur les activités agro-pastorales bien qu'elle commence à se diversifier.
+        Le Burkina Faso est un pays enclavé de l'Afrique de l'ouest s'étendant sur une superficie de <em style="color: red">274.300 kilomètres carrés et peuplé de 22.1 millions d'habitants.</em> Son économie se repose en grande partie sur les activités agro-pastorales bien qu'elle commence à se diversifier.
         Malgré une population croissante de personnes handicapées dûe aux séquelles de la polio à d'autres maladies, la vieillesse ou les cas accidentaux, il est fréquent d'observer qu'un grand nombre de personnes handicapées sont toujours sous-estimées et ignorées. 
   
         Ceci n'est pas seulement causé par une culture d'exclusion qui alimente les barrières sociales, prédateurs leurs droits
@@ -984,9 +984,9 @@ function myFunction() {
          Vivre avec un handicap, c'est expérimenter de multiples barrières sociales et perpétuelles faites de challenges malgré l'apprentissage et le forgeage d'une personnalité que cela peut générer.  
          <br>
          En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes chaque jour. Si elles vivent exclues comme une île au milieu d'un océan sans aucune connection avec la terre ferme, avoir des opportunités sera sans doute très rare. 
-         Le fait que des gens qui étaient censés être aidés les premiers, se retrouvent complètement oubliés est non seulement une erreur sociale mais indique le nieau des mentalités des un-es et des autres. 
+         Le fait que des gens qui étaient censés être aidés les premiers, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement une erreur sociale mais indique le niveau des mentalités des un-es et des autres. 
 <br><br>
-Tiki N'Yiki de la par la vision qu'elle a implémenté souhaiterait que dans un futur très immédiat, toute personne handicapée puisse être totalement inclue sans distinction, son droit respecté et sa vie facilitée. Ceci conduira à un changement positif plûtot que la peur et les discriminations sociales vécues. Et pour ce faire les enfants handicapées doivent être promues comme il se le doit afin de les frayer le chemin, les ouvrir des portes et créér des opportunités.
+Tiki N'Yiki de la par la vision qu'elle a implémenté souhaiterait que dans un futur très immédiat, toute personne handicapée puisse être totalement inclue sans distinction, son droit respecté et sa vie facilitée. Ceci conduira à un changement positif plûtot que la peur et les discriminations sociales vécues. C'est pour ce faire que les enfants handicapés doivent être promus comme il se le doit afin de les frayer le chemin, les ouvrir des portes et créér des opportunités.
         </p>
           
 
@@ -1028,11 +1028,11 @@ Tiki N'Yiki de la par la vision qu'elle a implémenté souhaiterait que dans un 
       </strong>
     </span>
 <br>
-<br>Vues les barrières sociales mentionnées ci-dessus, le manque fondamental d'infrastructures adaptées, les discriminations intempestives, il est évident que les personnes handicapées seront lésées au quotidien. 
-Les gouvernements font peu de choses afin de les aider financièrement en termes de donner un chèque mensuel aux personnes qui ne peuvent pas travailler. 
+<br>Vues les innombrables défis sociaux comme les barrières sociales ci-dessus mentionnées, le manque fondamental d'infrastructures adaptées, les recurentes discriminations journalières , il est évident que les personnes handicapées seront lésées au quotidien, c'est-à-dire qu'elles n'auront pas la vie facile. Et c'est débile 
+que les gouvernements font peu de choses pour les aider financièrement en termes de donner un chèque mensuel aux personnes qui ne peuvent pas travailler. 
 Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin de rêver dans le futur. 
         <br><br>
-         Dans certaines familles il n'y a aucun doute que des enfants handicapés ne soient pas privilégiés de bénéficier de services que des enfants non handicapés. Dans la plupart des cas la priorité est portée sur les enfants dits normaux. Mais en agissant de la sorte les parents discriminent leurs propres enfants et les éloignent de leurs droits.  
+         Dans certaines familles il n'y a aucun doute que des enfants handicapés ne soient pas toujours privilégiés par rapport à certains enfants dits nornaux. Dans la plupart des cas la priorité est portée sur les enfants dits normaux. Mais en agissant de la sorte les parents, eux-mêmes discriminent leurs propres enfants sur la base de son handicap. Cela est dangereux pour l'enfant car il rsique de faire face à une suppression de ses propres droits par ses propres parents.  
         <br>
         <br>
          Les problèmes sont une légion, variés, dures et sont à differents niveaux mais sont défiable aussi. Il est impensable de voir que des personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier ou sortir pour une simple visite faute de moyens de transport. Elles n'ont pas la possibilité de le faire. Elles n'ont pas de voitures, de motos ni même des tricycles 
