--- a/index.html
+++ b/index.html
@@ -1206,10 +1206,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     <p>
                       <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée vivant des séquelles de poliomyélite et animateur-enseignant. Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
-                Bien avant il avait travaillé comme animateur dans une association dite Paas Neere pour les personnes handicapées. Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale, la plupart lui a assuré leur soutien total. 
+                Bien avant il avait travaillé de 2005 à 2016 comme animateur dans une association nommée Paas Neere. Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale, l'ont assuré leur soutien total. 
                 <br>
                 <br>
-                Certains lui ont assuré non seulement leurs soutiens par de petites donations mais aussi de la mise en place d'un réseau de contacts pouvant aider à faire émerger son idée de projet. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les enfants handicapés. 
+                Certains lui ont assuré non seulement leurs soutiens par de petites donations mais aussi de la mise en place d'un réseau de contacts pouvant aider à faire émerger son idée de projet. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
                 <br>
                 Heureusement et malheureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que le pays a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Néanmoins il veut continuer à faire fonctionner Tiki N'Yiki de loin en s'appuyant sur une personne physique ou morale locale pour la poursuite de certains projets importants au profit de l'éducation de tous les enfants handicapés afin qu'ils aient des opportunités dans leurs vies malgré eux.
