--- a/index.html
+++ b/index.html
@@ -1215,11 +1215,19 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Heureusement et malheureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que le pays a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Néanmoins il veut continuer à faire fonctionner Tiki N'Yiki de loin en s'appuyant sur une personne physique ou morale locale pour la poursuite de certains projets importants au profit de l'éducation de tous les enfants handicapés afin qu'ils aient des opportunités dans leurs vies malgré eux.
                 <br>
                 <br>
-                <b style="font-family: georgia; color: blue; font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
+                <b style="font-family: georgia; color: rgb(24, 24, 131); font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
 
               </p> 
       </div>
-        
+
+    <div class="k1">
+    <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
+  <figure>
+    <figcaption style="font-family: 'helvetica'; margin-top: 5px; font-size: 13px; color: rgba(103, 103, 103, 0.895)">
+    Un affluent de la rivière ASSOMPTION à Saint-Côme dans Lanaudière au Québec [Canada/Printemps 2023]
+  </figcaption> 
+</figure>
+    </div>
         </div>
 
         <a href="#Top">
