--- a/index.html
+++ b/index.html
@@ -1223,8 +1223,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <div class="k1">
     <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
   <figure>
-    <figcaption style="font-family: 'helvetica'; margin-top: 5px; font-size: 13px; color: rgba(103, 103, 103, 0.895)">
-    Un affluent de la rivière ASSOMPTION à Saint-Côme dans Lanaudière au Québec [Canada/Printemps 2023]
+    <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 12px; color: rgba(103, 103, 103, 0.895)">
+    Gabriel dans la nature de Saint-Côme dans Lanaudière au Québec [Canada/Printemps 2023]
   </figcaption> 
 </figure>
     </div>
