--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                   </strong>
                 </span>            
                     <p>
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée vivant des séquelles de poliomyélite et animateur-enseignant. Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée vivant des séquelles de poliomyélite ayant été un enseignant, animateur et libre codeur. Il est le créateur afin de présenter sa vision pour Tiki N'Yiki. Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
                 Bien avant il avait travaillé de 2005 à 2016 comme animateur dans une association nommée Paas Neere. Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale, l'ont assuré leur soutien total. 
                 <br>
