--- a/index.html
+++ b/index.html
@@ -806,24 +806,24 @@ function myFunction() {
 
         <a href="https://disabilitycreditcanada.com/top-16-famous-people-with-disabilities/" target="_blank">
         <div class="Translator">
-        <b>Fameux handicapés</b>
+        <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Fameux handicapés</b>
         </div>
       </a>
       
         <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">
         <div class="BF">
-          <b>Burkina Faso</b>
+          <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Burkina Faso</b>
         </div>
       </a>
   
       <a href="https://www.ameiph.com/" target="_blank">
         <div class="Asso">
-          <b>Associations</b>
+          <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Associations</b>
         </div>
       </a>
       <a href="https://www.timeanddate.com/calendar/" target="_blank">
         <div class="datime">
-          <b> <p id="demo">
+          <b> <p id="demo" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 12px;">
                   <span id="datetime" > </span>
                </p></b>
               </div>
