--- a/index.html
+++ b/index.html
@@ -899,9 +899,10 @@ function myFunction() {
 
 <div class="fwrapper">
 
-  <div class="YT" style="font-size: 28px;"> Mon conseil aux autres personnes handicapées serait de se concentrer 
-    sur les choses que votre handicap ne vous empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez pas handicapé mentalement, ainsi que physiquement. [Stephen Hawkings]
+  <div class="YT" style="font-size: 28px; color:rgba(13, 102, 197, 0.972); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
+    " Mon conseil aux autres personnes handicapées serait, de se concentrer 
+    sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
+    Ne soyez pas handicapé mentalement, ainsi que physiquement " <em style="color:rgba(27, 27, 27, 0.849); font-size: 15px;">Stephen Hawkings, metaphysicien et auteur Anglais</em>
   </div> 
 
     <div class="content1"> 
