--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@ hr{
     text-align: left;
     width: 73%;
     height: auto;
-    font-family: 'helvetica';
-    font-size: 17.5px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
     color: rgba(17, 17, 17, 0.959);
     line-height: 32px;
     padding: 10px;
@@ -607,8 +607,8 @@ hr{
     text-align: left;
     width: 100%;
     height: 130px;
-    font-family: 'helvetica';
-    font-size: 17.5px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
     color: rgba(17, 17, 17, 0.959);
     line-height: 32px;
     margin-top: -1rem;
@@ -636,7 +636,7 @@ hr{
     height:auto;
     width: 74% ; 
     background: #fff;
-    font-family: helvetica;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 17.5px;
     line-height: 26px;
     
