--- a/index.html
+++ b/index.html
@@ -472,14 +472,17 @@ hr{
 }
 
 .YT{
-  display: flex;
+  display: grid;
   position: relative;
-  padding: 20px;
+  padding: 25px;
   width: 67%;
+  justify-content: center;
+  justify-items: center;
   height: 150px;
   color:rgba(82, 82, 82, 0.932);
   line-height: 29px;
   margin-top: 2rem;
+  margin-left: 13rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 14px;
 }
 
@@ -899,11 +902,15 @@ function myFunction() {
 
 <div class="fwrapper">
 
-  <div class="YT" style="font-size: 28px; color:rgba(13, 102, 197, 0.972); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
-    " Mon conseil aux autres personnes handicapées serait, de se concentrer 
+  <a href="https://www.hawking.org.uk/" target="_blank">
+
+  <div class="YT" style="font-size: 27px; color:rgba(12, 118, 189, 0.928); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
+    "Mon conseil aux autres personnes handicapées serait, de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez pas handicapé mentalement, ainsi que physiquement " <em style="color:rgba(27, 27, 27, 0.849); font-size: 15px;">Stephen Hawkings, metaphysicien et auteur Anglais</em>
+    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color:rgba(27, 27, 27, 0.849); font-size: 16px;">Stephen Hawkings, metaphysicien et auteur Anglais</em>
   </div> 
+
+</a> 
 
     <div class="content1"> 
 
@@ -943,7 +950,7 @@ function myFunction() {
       
             <p>
           
-              <br><b>Tiki N'Yiki</b> est une structure faîtière de promotion, de défense et de protection des droits des personnes en situation de handicap et plus particuliérement les enfants handicapés. Lancée en 2016, Tiki N'Yiki veut contribuer à une totale inclusion et un meilleur épanouissment social des enfants handicapés au Burkina Faso. 
+              <br><b style="color:#ff0a06">Tiki N'Yiki</b> est une structure faîtière de promotion, de défense et de protection des droits des personnes en situation de handicap et plus particuliérement les enfants handicapés. Lancée en 2016, Tiki N'Yiki veut contribuer à une totale inclusion et un meilleur épanouissment social des enfants handicapés au Burkina Faso. 
               <br>
               <br>
               Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Mossi_(peuple)" target="blank">[<b>Tiki and N'Yiki</b>] </a> du Mooré, une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso en Afrique de l'Ouest</a>:           
