--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOC<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
@@ -907,7 +907,7 @@ function myFunction() {
   <div class="YT" style="font-size: 27px; color:rgba(12, 118, 189, 0.928); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
     "Mon conseil aux autres personnes handicapées serait, de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color:rgba(27, 27, 27, 0.849); font-size: 16px;">Stephen Hawkings, metaphysicien et auteur Anglais</em>
+    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: #ff0a06; font-size: 16px;">Stephen Hawkings, metaphysicien et auteur Anglais</em>
   </div> 
 
 </a> 
@@ -1205,7 +1205,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
        
     
        Tiki N'Yiki ne veut aménager aucun effort afin que ces objectifs soient atteints. 
-       <br>De par le passé Tiki N'Yiki a organisé des évènements de lutte contre le changement climatique y compris des plantations et d'entretien d'arbres non seulement pour renforcer la photosynthèse mais aussi contribuer à repousser l'avancée du désert au sahel Burkinabè. En outre Tiki N'Yiki s'est attélée à une éducation-sensibilisation sur la pollution des sacs plastiques, leur nettoyage avec la participation des enfants du quartier et de bénévoles. 
+       <br>De 2010 à 2011; Tiki N'Yiki a organisé des évènements en marge de la lutte contre le changement climatique. C'étaient entre autres des séances d'éducation et de sensibilisation sur la pollution des sacs plastiques, puis des opérations de nettoyage de ces sacs plastiques jonchant les rues et ensuite des opérations de plantations et d'entretien d'arbres afin de repousser l'avancée du désert et renforcer l'effet de la photosynthèse. 
        <br>
        <br>
        En marge des séances de nettoyage de sacs plastiques, la condition sine quanon est d'éduquer les populations en particulier les enfants sur le changement climatique et ses colloraires de désastreuses conséquences sur la planète.
