--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOC<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1076,7 +1076,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         Nous connaissons tous l'importance de l'éducation entant que puissant outil, le but premier de Tiki N'Yiki est d'améliorer l'éducation, et aider ces enfants handicapés à avoir des opportunities dont ils méritent malgré leur handicap. C'est pour cela que l'INCLUSION devrait être supportée.
         <br><br>
-        <b style="font-size: 22px; font-family:'trebuchet ms'; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 20px;">Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
+        <b style="font-size: 22px; font-family:'trebuchet ms'; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 25px;">Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
 </div>
 
