--- a/index.html
+++ b/index.html
@@ -986,13 +986,15 @@ function myFunction() {
         </div>
 
           <div class="CRT2">
-
+            <a href="https://fr.wikipedia.org/wiki/Afrique" target="_blank">
             <div>
             <img src="https://previews.123rf.com/images/michal812/michal8121306/michal812130600184/20531769-burkina-faso-on-actual-vintage-political-map-of-africa-with-flags.jpg" alt="Africa">
             <figure>
               <figcaption style=" margin-top: 0.1rem; color: #2e2e2e; font-family: 'verdana'; font-size: 13px; text-align: left;">Carte du Burkina Faso en Afrique </figcaption>
               </figure>
             </div>
+          </a>
+
             <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">
           <div>
          <img src="https://ow-prayer-api.info/files/en/images/main-maps/burk-02.png" alt="Carte du Burkina Faso">
