--- a/index.html
+++ b/index.html
@@ -888,10 +888,11 @@ function myFunction() {
                 </div>
             </a>
 
-          <a href="#" target="blank"> 
+          <a href="mailto:gabrielkouss2001@yahoo.fr"> 
             <div  class="myDiv6">
               <b>Message</b>
             </div>
+          </a>
         </a>
 </div>
 
