--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 14px;
-      color:  rgba(12, 139, 230, 0.957);
+      font-size: 15px;
+      color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
     }
@@ -95,8 +95,8 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 14px;
-      color:  rgba(12, 139, 230, 0.957);
+      font-size: 15px;
+       color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
     }
@@ -116,8 +116,8 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 14px;
-      color:  rgba(12, 139, 230, 0.957);
+      font-size: 15px;
+      color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
     }
@@ -137,8 +137,8 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 14px;
-      color:  rgba(12, 139, 230, 0.957);
+      font-size: 15px;
+       color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
     }
@@ -200,7 +200,7 @@
             height: 150px; 
             background: rgba(24, 126, 189, 0.996);
             font-family: 'trebuchet ms';
-            font-size: 1.7rem;
+            font-size: 1.5rem;
             color: #fff;
           }
           
@@ -220,7 +220,7 @@
             align-items: center;
             cursor: pointer;
             font-family: georgia;
-            font-size: 19px;
+            font-size: 18px;
             height: 40px;
             width: 100%;
             color: #0d0d0de5;
@@ -242,7 +242,7 @@
             align-items: center;
             height: 40px;
             width: 100%;
-            font-size: 19px;
+            font-size: 18px;
             cursor: pointer;
             font-family: georgia;
             color: #0d0d0de5;
@@ -263,7 +263,7 @@
             align-items: center;
             height: 40px;
             width: 100%;
-            font-size: 19px;
+            font-size: 18px;
             cursor: pointer;
             font-family: georgia;
             color: #0d0d0de5;
@@ -284,7 +284,7 @@
             align-items: center;
             height: 40px;
             width: 100%;
-            font-size: 19px;
+            font-size: 18px;
             cursor: pointer;
             font-family: georgia;
             color: #0d0d0de5;
@@ -305,7 +305,7 @@
             align-items: center;
             height: 40px;
             width: 100%;
-            font-size: 19px;
+            font-size: 18px;
             cursor: pointer;
             font-family: georgia;
             color: #0d0d0de5;
@@ -347,7 +347,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 450px;
+        height: 390px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
@@ -480,7 +480,6 @@ hr{
   justify-items: center;
   height: 150px;
   color:rgba(82, 82, 82, 0.932);
-  line-height: 29px;
   margin-top: 2rem;
   margin-left: 13rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 14px;
@@ -878,7 +877,7 @@ function myFunction() {
 
             <a href="#" target="blank"> 
                 <div  class="myDiv2">
-                  <b>Santé </b>
+                  <b>Santé et Soins </b>
             </div>
             </a>
 
@@ -890,7 +889,7 @@ function myFunction() {
 
           <a href="mailto:gabrielkouss2001@yahoo.fr"> 
             <div  class="myDiv6">
-              <b>Message</b>
+              <b>Contact</b>
             </div>
           </a>
         </a>
@@ -906,10 +905,10 @@ function myFunction() {
 
   <a href="https://www.hawking.org.uk/" target="_blank">
 
-  <div class="YT" style="font-size: 27px; color:rgba(12, 118, 189, 0.928); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
+  <div class="YT" style="line-height: 32px; font-size: 24.4px; text-align: justify; color:rgba(13, 109, 193, 0.928); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
     "Mon conseil aux autres personnes handicapées serait, de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: #ff0a06; font-size: 18px;">[ Stephen Hawkings, metaphysicien et auteur Anglais ]</em>
+    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: #ff0a06; font-size: 20px;">[ Stephen Hawkings, metaphysicien et auteur Anglais ]</em>
   </div> 
 
 </a> 
@@ -1100,7 +1099,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <b>
      <a href="https://www.education.gov.bf/accueil"  target="blank">1. L'éducation</a>
          <br>
-     <a href="file:///C:/Users/User/Documents/Health-Care.html" target="blank">2. La santé</a>
+     <a href="file:///C:/Users/User/Documents/Health-Care.html" target="blank">2. La santé et les soins</a>
          <br>
      <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" target="blank">3. La sécurité alimentaire</a>
          <br>
@@ -1149,12 +1148,12 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
 
         <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-          <strong>2. Soins de santé
+          <strong>2. Santé et Soins
           </strong>
         </span>
     
         <p>
-          <br>La santé est un droit universel pour tout le monde. Mais comment les personnes handicapées sans ou à faible revenus pourront accéder aux soins médicaux quand elles tombent malades vu que la santé devient une grande affaire d'argent ? 
+          <br>La santé est un droit universel pour tout le monde. Mais comment les personnes handicapées sans ou à faible revenus pourront accéder aux soins médicaux quand elles tombent malades vu que la santé devient une grande affaire d'argent? 
           Sur ce point très crucial, l'approche de Tiki N'Yiki sera de créer divers partenariats avec des hôpitaux, des médécins, des groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leur savoir-faire pour soigner des enfants handicapés qui manquent de couverture 
          médicale en cas de maladie.
         </p>
